auth/kustomize/auth/overlays/local/auth/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  labels:
    app: auth
spec:
  tls:
  - hosts:
      - AUTH_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: AUTH_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: AUTH_SERVICE_NAME
            port:
              name: http
